--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -16,3 +16,21 @@
   max-height: 600px;
   display: flex;
 }
+
+.footer-title {
+  color: white;
+  font-weight: 700;
+  font-size: 1.1rem;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 110px;
+  margin-bottom: 40px;
+}
+
+.title-bar-footer {
+  height: 3px;
+  width: 40px;
+  background: #5e2bff;
+}
