--- a/src/Components/Hero/Hero.css
+++ b/src/Components/Hero/Hero.css
@@ -173,7 +173,7 @@
 @media screen and (max-width: 430px) {
   .hero-phrase {
     width: 110%;
-    font-size: 1.5rem;
+    font-size: 1.4rem;
   }
 }
 
