--- a/src/Components/Projects/Projects.css
+++ b/src/Components/Projects/Projects.css
@@ -15,6 +15,7 @@
   height: 100%;
   max-width: 1050px;
   display: flex;
+  align-items: center;
   flex-direction: column;
 }
 
@@ -76,6 +77,7 @@
 
 .project-image {
   max-width: 800px;
+  width: 100%;
   border-radius: 7px;
 }
 
